<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LessonOneFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@null"
            android:contentDescription="@string/home_button"

            android:src="@drawable/ic_home_black_48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/quizLessonOnePointer"
            style="@style/CurrentLessonPointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/one"
            android:textIsSelectable="false"
            app:layout_constraintBottom_toBottomOf="@+id/homeButton"
            app:layout_constraintEnd_toStartOf="@+id/quizLessonTwoPointer" />


        <TextView
            android:id="@+id/quizLessonTwoPointer"
            style="@style/OtherLessonPointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            app:layout_constraintBottom_toBottomOf="@+id/quizLessonOnePointer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/quizLessonThreePointer"
            style="@style/OtherLessonPointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/three"
            app:layout_constraintBottom_toBottomOf="@+id/quizLessonOnePointer"
            app:layout_constraintStart_toEndOf="@+id/quizLessonTwoPointer" />

        <TextView
            android:id="@+id/quizTitleTextView"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/lesson_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quizLessonOnePointer" />


        <TextView
            android:id="@+id/lessonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:justificationMode="inter_word"
            android:text="@string/lesson_one_text_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quizTitleTextView" />

        <ImageView
            android:id="@+id/tcslogoImageView"
            android:layout_width="306dp"
            android:layout_height="279dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/vierschanzentournee_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lessonText" />

        <TextView
            android:id="@+id/lessonTextTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:justificationMode="inter_word"
            android:text="@string/lesson_one_text_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tcslogoImageView" />

        <ImageView
            android:id="@+id/oberstdorfImageView"
            android:layout_width="0dp"
            android:layout_height="226dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/oberstdorf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lessonTextTwo" />

        <TextView
            android:id="@+id/lessonTextThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:justificationMode="inter_word"
            android:text="@string/lesson_one_text_three"
            app:layout_constraintBottom_toTopOf="@id/startQuizButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oberstdorfImageView" />


        <TextView
            android:id="@+id/quizLessonOneBottomPointer"
            style="@style/CurrentLessonPointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/one"
            android:textIsSelectable="false"
            app:layout_constraintTop_toTopOf="@+id/startQuizButton"
            app:layout_constraintEnd_toStartOf="@+id/quizLessonTwoBottomPointer" />


        <TextView
            android:id="@+id/quizLessonTwoBottomPointer"
            style="@style/OtherLessonPointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            app:layout_constraintBottom_toBottomOf="@+id/quizLessonOneBottomPointer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/quizLessonThreeBottomPointer"
            style="@style/OtherLessonPointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/three"
            app:layout_constraintBottom_toBottomOf="@+id/quizLessonOneBottomPointer"
            app:layout_constraintStart_toEndOf="@+id/quizLessonTwoBottomPointer" />

        <ImageButton
            android:id="@+id/startQuizButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@null"
            android:contentDescription="@string/button_to_start_quiz"
            android:src="@drawable/ic_test_quiz"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>